--- a/main.html
+++ b/main.html
@@ -8,13 +8,15 @@
     <body>
         <div class="container">
             <div id="standardDiv" class="item-item1">
-                <h1>So <span style="color:red">YOU</span> want to golf? ⛳</h1>
-                <button id="btn">Log down this location!</button>
-                <button id="btn1">That's it for this hole!</button>
-                <h3 id="ipAddress">We have your <span style="color:blueviolet">IP address</span>:</h3>
-                <h3 id="lat">Current <span style="color:darksalmon">Latitude</span>:</h3>
-                <h3 id="long">Current <span style="color:darkorange">Longtidude</span>:</h3>
-                <h3 id="distanceFromHole">Distance from Hole:</h3>
+                <h1 class="titleCard">So <span style="color:red" class="baseNotif">YOU</span> want to golf? ⛳</h1>
+                <button id="btn" class="buttonAni">Log down this location!</button>
+                <button id="btn1" class="buttonAni">That's it for this hole!</button>
+                <h3 id="ipAddress" class="baseNotif">We have your <span style="color:blueviolet">IP address</span>:</h3>
+                <h3 id="lat" class="baseNotif">Current <span style="color:darksalmon">Latitude</span>:</h3>
+                <h3 id="long" class="baseNotif">Current <span style="color:darkorange">Longtidude</span>:</h3>
+                <h3 id="distanceFromHole" class="baseNotif">Distance from Hole:</h3>
+                <img class="golfer" src="https://freepngimg.com/save/33619-golfer-transparent-background/525x563" height="200"/>
+                <img class="golfball" src="https://freesvg.org/img/1393818317.png" height="300"/>
             </div>
             <div class="item-item2">
                 <table id="coordTable">
@@ -34,9 +36,6 @@
                         <th>Total distance</th>
                     </tr>
                 </table>
-            </div>
-            <div class="item-item4" id="wario">
-                <img width="800" height="500" src="https://media.istockphoto.com/id/1035128110/photo/man-blowing-on-golf-ball.jpg?s=612x612&w=0&k=20&c=qKB2Ab_aJSfm1vlpyt05Ryf3bywyRAdOCYxFdo7sRrk=" align="center"/>
             </div>
         </div>
     </body>
