--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
         <title>Download free RAM!</title>
         <link rel="stylesheet" href="main.css">
         <link rel="icon" href="assets/boku-no-deku.jpg" type="image">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
     <body>
         <div class="container">
